# modern-cpp-boilerplate

./: .gitignore  CMakeLists.library.txt  CMakeLists.service.txt  CMakeLists.txt  README.md  Vagrantfile  analyze.cmake  clang-lto.cmake  clang.cmake  coverage.cmake  gcc-lto.cmake  gcc.cmake  icc.cmake  sanitize-address.cmake  sanitize-leak.cmake  sanitize-memory.cmake  sanitize-thread.cmake  sanitize-undefined.cmake
cmake/: boilerplate.cmake  utility_functions.cmake
cookbooks/boost/attributes/: default.rb
cookbooks/boost/recipes/: source.rb
cookbooks/pickleng/: metadata.rb
cookbooks/pickleng/recipes/: default.rb
resources/: log4cxx.xml
scripts/: build.py  ci.py  clang-analyze.sh  clangxx-analyze.sh  gocd.py
scripts/detail/: call.py  cpack_generator.py  generate_command.py  logging.py  pack_command.py  test_command.py  timer.py  toolchain_name.py  toolchain_table.py  util.py
src/: placeholder.cpp  placeholder.hpp
test/: main.cpp  placeholder.ut.cpp  test_common.hpp
